kubernetes/01-namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: potee
  labels:
    name: potee
---
