kubernetes/app.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: potee
spec:
  selector:
    matchLabels:
      app: app
  replicas: 1
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: explabs/potee-tasks:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
        volumeMounts:
          - name: app-config
            mountPath: /app/config.yml
            subPath: config-file
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
      volumes:
        - name: app-config
          configMap:
            name: app-configmap

---
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: potee
  labels:
    app: app
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: app
