kubernetes/database.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: potee
spec:
  selector:
    matchLabels:
      app: database
  replicas: 1
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: database
        image: postgres:15
        ports:
          - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: potee
  labels:
    app: database
spec:
  ports:
    - port: 5432
      protocol: TCP
  selector:
    app: database
