kubernetes/k3s-api.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k3s-api
  namespace: potee
spec:
  selector:
    matchLabels:
      app: k3s-api
  replicas: 1
  template:
    metadata:
      labels:
        app: k3s-api
    spec:
      containers:
        - name: k3s-api
          image: explabs/k3s-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
      serviceAccountName: task-manager

---
apiVersion: v1
kind: Service
metadata:
  name: k3s-api
  namespace: potee
  labels:
    app: k3s-api
spec:
  ports:
    - port: 3000
      protocol: TCP
  selector:
    app: k3s-api
