kubernetes/minio.yml
---

apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  # This name uniquely identifies the Deployment
  name: minio-deployment
  namespace: potee
spec:
  selector:
    matchLabels:
      app: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        # Label is used as selector in the service.
        app: minio
    spec:
      containers:
      - name: minio
        # Pulls the default Minio image from Docker Hub
        image: quay.io/minio/minio
        args: ['server', '/data', '--console-address', ':9001']
        ports:
        - containerPort: 9000
          hostPort: 9000
        # Mount the volume into the pod
        volumeMounts:
        - name: storage # must match the volume name, above
          mountPath: "/data"
      # Refer to the PVC created earlier
      volumes:
      - name: storage
        persistentVolumeClaim:
          # Name of the PVC created earlier
          claimName: minio-pv-claim

---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: potee
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      name: minio
      port: 9000
    - protocol: TCP
      name: minio-console
      port: 9001
  selector:
    app: minio
