kubernetes/openvpn.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ovpn-admin
  namespace: potee
spec:
  selector:
    matchLabels:
      app: ovpn-admin
  template:
    metadata:
      labels:
        app: ovpn-admin
    spec:
      containers:
      - name: ovpn-admin
        image: flant/ovpn-admin:2.0.1
        command: 
          - "/app/ovpn-admin"
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 8080
        volumeMounts:
          - name: ovpn-easyrsa
            mountPath: /mnt/easyrsa
          - name: ovpn-ccd
            mountPath: /mnt/ccd
      - name: openvpn
        image: flant/ovpn-admin:openvpn-2.0.1
        command: 
          - "/etc/openvpn/setup/configure.sh"
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
        ports:
          - containerPort: 1194
        volumeMounts:
          - name: ovpn-easyrsa
            mountPath: /etc/openvpn/easyrsa
          - name: ovpn-ccd
            mountPath: /etc/openvpn/ccd
      volumes:
        - name: ovpn-easyrsa
          persistentVolumeClaim:
            claimName: ovpn-easyrsa
        - name: ovpn-ccd
          persistentVolumeClaim:
            claimName: ovpn-ccd

---
apiVersion: v1
kind: Service
metadata:
  name: openvpn-svc
  namespace: potee
spec:
  type: LoadBalancer
  selector:
    app: ovpn-admin
  ports:
  - name: "openvpn"
    port: 7777
    targetPort: 1194

---
apiVersion: v1
kind: Service
metadata:
  name: ovpn-admin-svc
  namespace: potee
spec:
  selector:
    app: ovpn-admin
  type: LoadBalancer
  ports:
  - name: ovpn-admin
    port: 8080
    targetPort: 8080
